<resources>
    <string name="app_name">MVP_Lesson_1</string>
    <string name="counter_one_title">Counter one:</string>
    <string name="counter_two_title">Counter two:</string>
    <string name="counter_three_title">Counter three:</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="counter_default_value">0</string>
    <string name="user_login">User login</string>
    <string name="activity">Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_unknown">Name unknown</string>
</resources>