<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitleOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_one_title"
        android:textSize="@dimen/counter_title_text_size" />

    <TextView
        android:id="@+id/tvCounterOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_default_value"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1" />

    <TextView
        android:id="@+id/tvTitleTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_two_title"
        android:textSize="@dimen/counter_title_text_size" />

    <TextView
        android:id="@+id/tvCounterTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_default_value"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2" />

    <TextView
        android:id="@+id/tvTitleThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_three_title"
        android:textSize="@dimen/counter_title_text_size" />

    <TextView
        android:id="@+id/tvCounterThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_default_value"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3" />

</LinearLayout>